[metadata]
name = check_link
version = 0.0.6
description = Check if URL is available
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/check-link
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
         URL
         validator
         HTTP

[options]
python_requires = >= 3.7
install_requires =
                 # aiohttp
                 httpx
                 requests

packages = find:

[options.extras_require]
faster =
    # aiohttp[speedups]
    # aiodns

cli =
    click

dev =
    pytest
    # pytest-asyncio
    pytest-httpx
    pytest-cov
    aioresponses
    responses
    faker

[options.entry_points]
console_scripts =
		check-link = check_link.cli:main

[options.packages.find]
exclude =
    tests


[tool:pytest]
testpaths = tests
asyncio_mode = auto
